Add proper menu icon in mobile view using Font Awesome

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -48,7 +48,7 @@
 
 .filter-btn:hover, 
 .filter-btn:focus {
-    color: #F178B6;
+    color: #ffffff;
     border-color: #F178B6;
     outline: none;
     box-shadow: 0 5px 15px rgba(241, 120, 182, 0.15);
